# WebEnsemble

./: .gitignore  LICENSE  README.md  docker-compose.yaml  experiments.ipynb  requirements.txt
.github/workflows/: python-tests.yml
scripts/: build.sh  d  run.sh
src/: ensembles.py
src/backend/: .temp.env  Dockerfile  crud.py  database.py  ensembles.py  main.py  models.py  pyproject.toml  schemas.py  settings.py  sockets.py  tasks.py  utils.py  worker.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 2a37ab2f9992_init.py  5dec3a5a8cca_init.py  fd21929c42a2_add_target_name_field.py
src/backend/tests/: test_ensembles.py
src/frontend/: Dockerfile  nuxt.config.ts  package.json
src/frontend/assets/: ButtonStyle.css  DotStyle.css  InputStyle.css
src/frontend/components/: Announcement.vue  Footer.vue  Header.vue  LineChart.vue  Logo.vue  Sidebar.vue  SidebarButton.vue
src/frontend/layouts/: default.vue
src/frontend/pages/: home.vue  index.vue
src/frontend/pages/model/: [id].vue  new.vue
src/frontend/pages/model/fit/: [id].vue
src/frontend/pages/model/predict/: [id].vue
src/frontend/store/: index.js
src/nginx/: proxy.conf
tests/: test_ensembles.py
