[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["revit3d <tumanezhikov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
scipy = "^1.11.4"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
pandas = "^2.1.3"
pytest = "^7.4.3"
celery = {extras = ["redis"], version = "^5.3.6"}
websockets = "^12.0"
pylint = "^3.0.2"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
